Adding dev dependencies for deployment

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://github.com/Israel2800/JZ-Construction",
+  "homepage": "https://Israel2800.github.io/JZ-Construction",
   "name": "jz-construction",
   "private": true,
   "version": "0.0.0",
