--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@mui/icons-material": "^5.11.16",
     "@react-icons/all-files": "^4.1.0",
     "bootstrap": "^5.2.3",
+    "nodemailer": "^6.9.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
